--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <header>
+    <header class="mainImage coreHeader ">
         <nav class="upperNav wrapper">
             <ul>
                 <li><a href="">home</a></li>
                 <li><a href="">about</a></li>
-                <li><a href="">blog</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="./blogPost.html">blog</a></li>
+                <li><a href="./mallContact.html">contact</a></li>
             </ul>
         </nav>
         <h1 class="wrapper">
