--- a/mallContact.html
+++ b/mallContact.html
@@ -60,7 +60,7 @@
                         <label for="message"></label>
                         <input type="textarea" class="commentArea" name="message" placeholder="Message">
                         
-                        <button class="postComment">post Comment</button>
+                        <button class="postComment">Sumbit</button>
                     </section>
                 </div>
             </div>
