--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="mainImage coreHeader ">
-        <nav class="upperNav wrapper">
+        <nav class="upperNav wrapper horizontal">
             <ul>
                 <li><a href="">home</a></li>
                 <li><a href="">about</a></li>
@@ -17,6 +17,25 @@
                 <li><a href="./mallContact.html">contact</a></li>
             </ul>
         </nav>
+
+        <!-- the sliding nav here -->
+        <nav class="upperNav wrapper sliding">
+            <button class="closeButton">
+                <i class="fa-solid fa-x "></i>
+            </button>
+            <ul>
+                <li><a href="">home</a></li>
+                <li><a href="">about</a></li>
+                <li><a href="./blogPost.html">blog</a></li>
+                <li><a href="./mallContact.html">contact</a></li>
+            </ul>
+        </nav>
+        <!-- the hamburger button here -->
+        <div class="wrapper hamburger">
+            <i class="fa-sharp fa-solid fa-bars"></i>
+        </div>
+        <!-- sliding nav code ends here -->
+
         <h1 class="wrapper">
             <p>the</p>
             <span>restaurant</span>
@@ -159,4 +178,6 @@
 
 
 </body>
+<script src="https://kit.fontawesome.com/887ea216a3.js" crossorigin="anonymous"></script>
+<script src="./scripts/app.js"></script>
 </html>
